2014-04-16  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/d3.v3.4.5.js: added the last javascript
	D3 library.
	
	* include/javascript/pandora_modules.js,
	include/functions_visual_map.php, include/functions_networkmap.php,
	include/functions_os.php, include/db/mysql.php,
	include/functions_netflow.php, include/constants.php,
	include/functions_reporting.php: standarized the color, now the
	code uses the colors constant.

2014-04-16  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php: cleaned source code and killed
	some unicorns and magic numbers, now there is some constants.

2014-04-16  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/setup_netflow.php: Added a radio buttons
	to activate or deactivate the name resolution for ip addresses.

	* include/functions_config.php: Added the name resolution by
	if to the funcion "config_update_config".

	* include/functions_graph.php: Added 50px to the width of the
	pie of the function "graph_netflow_aggregate_pie".

	* include/functions_netflow.php: Improved the styles of the
	netflow report tables.

	* include/graphs/flot/pandora.flot.js: Now the legend items
	show the percentage when the pie labels are hidden.

	* pandora_console/include/graphs/functions_d3.php,
	  pandora_console/include/graphs/pandora.d3.js: Added files.

2014-04-14  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_ui.php: Improved the function
	"ui_get_url_refresh" to deal with arrays obtained from 
	the parameters of get, post and custom sources.

	* operation/agentes/status_monitor.php: Now is possible
	to filter the modules by the agents custom fields.

2014-04-10  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* pandoradb.sql,
	  pandoradb.oracle.sql,
	  pandoradb.postgreSQL.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql: